Sweeping: batch button colors for hide/show overlay - line heights on body paragraphs - landscape hide/show bar and icon fix - corrected font on guide page - made landscpae height even more forgiving to show on smaller screens - reworked faq css to transision could be on height and not font-size

--- a/source/stylesheets/base/_variables.sass
+++ b/source/stylesheets/base/_variables.sass
@@ -37,6 +37,6 @@ $chart-tab-padding-right: 20px
 $chart-tab-padding-bottom: 20px
 $chart-tab-padding-left: 20px
 
-$device-height-small: 800px
+$device-height-small: 760px
 
 $cityscape-height: 300px
