--- a/source/stylesheets/components/_faqs.sass
+++ b/source/stylesheets/components/_faqs.sass
@@ -11,10 +11,8 @@
 
     &.active
       section
-        font-size: 16px
-        transition-property: all
-        transition-duration: .75s
-        transition-timing-function: cubic-bezier(0, 1, 0.5, 1)
+        max-height: 600px
+        transition: max-height .75s ease-in
         
       header
         span
@@ -45,8 +43,10 @@
 
     section
       background: #000
-      padding: 2em
-      font-size: 0px
-      transition-property: all
-      transition-duration: .5s
-      transition-timing-function: cubic-bezier(0, 1, 0.5, 1)
+      max-height: 0
+      overflow: hidden
+      transition: max-height .2s ease-out
+      
+      div
+        padding: 2em
+        font-size: 16px
