--- a/source/stylesheets/pages/_guide.sass
+++ b/source/stylesheets/pages/_guide.sass
@@ -6,7 +6,7 @@
     width: 100%
 
     *
-      font-family: sans-serif
+      font-family: $font-main
       line-height: 1.6em
 
   section:after
